--- a/telepict/templates/edit_pending_game.html
+++ b/telepict/templates/edit_pending_game.html
@@ -5,24 +5,24 @@
   <form action="{{ url_for('game.pending_game', game_id=game.id_) }}" method='post'>
     <div class="form-group">
       <label for="input-numrounds">Number of Rounds </label>
-      <input id="input-numrounds" type="text" name="numrounds" pattern="\d+" class="form-control" required value="1" />
+      <input id="input-numrounds" type="text" name="numrounds" pattern="\d+" class="form-control" required value="{{ game.num_rounds }}" />
     </div>
 
     <div class="form-group">
       <div class="form-check form-check-inline">
-        <input id="pass-left" class="form-check-input" type="radio" name="direction" value="left" checked /><label class="form-check-label" for="pass-left">Pass left</label>
+        <input id="pass-left" class="form-check-input" type="radio" name="direction" value="left"{% if game.pass_left %} checked{% endif %} /><label class="form-check-label" for="pass-left">Pass left</label>
       </div>
       <div class="form-check form-check-inline">
-        <input id="pass-right" class="form-check-input" type="radio" name="direction" value="right" /><label class="form-check-label" for="pass-right">Pass right</label>
+        <input id="pass-right" class="form-check-input" type="radio" name="direction" value="right"{% if not game.pass_left %} checked{% endif %} /><label class="form-check-label" for="pass-right">Pass right</label>
       </div>
     </div>
 
     <div class="form-group">
       <div class="form-check form-check-inline">
-        <input id="write-first" class="form-check-input" type="radio" name="write_first" value="1" checked /><label class="form-check-label" for="write-first">Write first</label>
+        <input id="write-first" class="form-check-input" type="radio" name="write_first" value="1" {% if game.write_first %} checked{% endif %} /><label class="form-check-label" for="write-first">Write first</label>
       </div>
       <div class="form-check form-check-inline">
-        <input id="draw-first" class="form-check-input" type="radio" name="write_first" value="0" /><label class="form-check-label" for="draw-first">Draw first</label>
+        <input id="draw-first" class="form-check-input" type="radio" name="write_first" value="0" {% if not game.write_first %} checked{% endif %} /><label class="form-check-label" for="draw-first">Draw first</label>
       </div>
     </div>
     <button type="submit" class="btn btn-primary">Update Game</button>
@@ -48,7 +48,7 @@
   <strong>Invited:</strong>
   <ul>
     {% for invitation in game.invitations -%}
-    <li>{{ invitation.recipient.name }} ({{ invitation.recipient.display_name }})</li> <form action="{{ url_for('game.revoke_invitation', game_id=game.id_, player_id=invitation.recipient_id) }}" method='post'><button>Revoke</button></form>
+    <li>{{ invitation.recipient.name }} ({{ invitation.recipient.display_name }})</li> <form action="{{ url_for('game.revoke_invitation', game_id=game.id_, player_id=invitation.recipient_id) }}" method='post'><button class="btn btn-secondary">Revoke</button></form>
     {%- endfor %}
   </ul>
   <form action="{{ url_for('game.invite_player', game_id=game.id_) }}" method="post" class="form-inline">
@@ -56,7 +56,7 @@
       <label for="invite-input">Invite player </label>
       <input id="invite-input" type="text" name="player_name" class="form-control" required />
       <button type="submit" class="btn btn-secondary">Invite</button>
-      <p>Or have them visit this URL: {{ url_for('game.respond_invitation', game_id=game.id_, _external=True) }}</p>
+      <p> Or have them visit this URL: {{ url_for('game.respond_invitation', game_id=game.id_, _external=True) }}</p>
     </div>
   </form>
   <form action="{{ url_for('game.start_game', game_id=game.id_) }}" method='post'>
