--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -49,7 +49,13 @@
       if (writing != '') {
         ws.send(JSON.stringify({'action': 'writing',
                                 'text': writing}));
+        updateDisplaySent('writing');
       }
+    }
+
+    function updateDisplaySent(type) {
+      resetDisplay();
+      disp.appendChild(h('p', {}, 'Passing ' + type + '...'));
     }
   </script>
 {% endblock %}
