--- a/telepict/templates/view_pending_game.html
+++ b/telepict/templates/view_pending_game.html
@@ -12,12 +12,14 @@
       <th>Players</th>
     </tr></thead>
     <tr>
-      <td>{{ game.creator.display_name }}</td>
+      <td>{{ game.creator.display_name }} ({{ game.creator.name }})</td>
       <td>{{ game.created.strftime(config.TS_FORMAT) }}</td>
       <td>{{ game.num_rounds }}</td>
       <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
       <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
-      <td>{{ game.players|map(attribute='display_name')|join(', ') }}</td>
+      <td>{% for player in game.players -%}
+        {{ player.display_name }} ({{ player.name }}){% if not loop.last %}, {% endif %}
+      {%- endfor %}</td>
     </tr>
   </table>
   <form action="{{ url_for('game.leave_pending_game', game_id=game.id_) }}" method='post'>
