--- a/telepict/templates/create_account.html
+++ b/telepict/templates/create_account.html
@@ -5,7 +5,7 @@
   <form action="{{ url_for('auth.create_account') }}" method='post'>
     <div class="form-group">
       <label for="input-name">Name </label>
-      <input id="input-name" type="text" name="name" class="form-control" required />
+      <input id="input-name" type="text" name="name" autocomplete="username" class="form-control" required />
     </div>
     <div class="form-group">
       <label for="input-dispname">Display Name</label>
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
     <label for="input-pwd">Password</label>
-    <input id="input-pwd" type="password" name="password" class="form-control" pattern=".{8,}" />
+    <input id="input-pwd" type="password" name="password" autocomplete="new-password" class="form-control" pattern=".{8,}" />
       <small class="form-text text-muted">At least 8 characters</small>
     </div>
     <button type="submit" class="btn btn-primary">Create Account</button>
