--- a/telepict/templates/login.html
+++ b/telepict/templates/login.html
@@ -11,7 +11,7 @@
         </div>
         <div class="form-group">
           <label for="input-pwd">Password </label>
-          <input id="input-pwd" type="password" name="password" class="form-control" required />
+          <input id="input-pwd" type="password" name="password" autocomplete="current-password" class="form-control" required />
         </div>
         <input id="redirect-url" type="hidden" name="redirect_url" value="{% if redirect_url is defined %}{{ redirect_url }}{% elif request.path|trim('/') not in ('login', 'create_account') %}{{ request.url }}{% else %}{{ url_for('game.index') }}{% endif %}" />
         <button type="submit" class="btn btn-primary">Login</button>
