Changed Pass buttons to Submit buttons

--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -66,11 +66,11 @@
   <div id="game-display"></div>
   <div id="text-input-div" style="display: none">
     <input id="text-input" size="100" />
-    <button type="button" onclick="passWriting()">Pass</button>
+    <button type="button" onclick="passWriting()">Submit</button>
   </div>
   <div id="image-input-div" style="display: none">
     <div id="image-canvas" data-dimensions="{{ config['CANVAS_WIDTH'] }}x{{ config['CANVAS_HEIGHT'] }}"></div>
-    <button type="button" onclick="passDrawing()">Pass</button>
+    <button type="button" onclick="passDrawing()">Submit</button>
     <br/>
     <p>Or upload a file:</p>
     <input type="file" id="img-upload">
