--- a/telepict/templates/base.html
+++ b/telepict/templates/base.html
@@ -26,7 +26,7 @@
         {%- endfor %}
       {%- endif -%}
     {%- endwith %}
-    <div id="content" class="container">
+    <div id="content" class="container-fluid">
       {% block content %}{% endblock %}
     </div>
     <div id="footer">
