--- a/telepict/templates/index.html
+++ b/telepict/templates/index.html
@@ -5,41 +5,12 @@
   {% if 'username' in session -%}
     <div class="row">
       <div class="col-md-4">
-        <h1>Active Games</h1>
-      </div>
-    </div>
-    <table class="table">
-      <thead><tr>
-        <th></th>
-        <th>Started</th>
-        <th>Last Move</th>
-        <th># Rounds</th>
-        <th>Direction</th>
-        <th>Start</th>
-        <th>Players</th>
-      </tr></thead>
-      {% for game in games -%}
-      {% set game_state = game_states[game.id_] -%}
-      <tr class="{% if game_state == 'done' %}table-success{% elif game_state == 'done_own' %}table-default{% elif game_state == 'wait' %}table-default{% else %}table-warning{% endif %}">
-        <td><a href="{{ url_for('game.view_game', game_id=game.id_) }}" class="btn {% if game_state == 'done' %}btn-success{% elif game_state == 'done_own' %}btn-success{% elif game_state == 'wait' %}btn-secondary{% else %}btn-warning{% endif %}">{% if game_state == 'done' %}View All{% elif game_state == 'done_own' %}View Own{% elif game_state == 'wait' %}Waiting{% else %}Continue{% endif %}</a></td>
-        <td>{{ game.started.strftime(config.TS_FORMAT) }}</td>
-        <td>{% if game.last_move is not none %}{{ game.last_move.strftime(config.TS_FORMAT) }}{% endif %}</td>
-        <td>{{ game.num_rounds }}</td>
-        <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
-        <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
-        <td>{% for player in game.players -%}
-          {{ player.display_name }} ({{ player.name }}){% if not loop.last %}, {% endif %}
-        {%- endfor %}</td>
-      </tr>
-      {%- endfor %}
-    </table>
-    <div class="row">
-      <div class="col-md-4">
         <h1>Pending Games</h1>
       </div>
       <div class="col-md-2">
         <a class="btn btn-primary" href="{{ url_for('game.create_game') }}">Create Game</a>
       </div>
+    </div>
     <table class="table">
       <thead><tr>
         <th></th>
@@ -62,6 +33,67 @@
           {%- endif %}</td>
         <td>{{ game.creator.display_name }} ({{ game.creator.name }})</td>
         <td>{{ game.created.strftime(config.TS_FORMAT) }}</td>
+        <td>{{ game.num_rounds }}</td>
+        <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
+        <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
+        <td>{% for player in game.players -%}
+          {{ player.display_name }} ({{ player.name }}){% if not loop.last %}, {% endif %}
+        {%- endfor %}</td>
+      </tr>
+      {%- endfor %}
+    </table>
+
+    <div class="row">
+      <div class="col-md-4">
+        <h1>Active Games</h1>
+      </div>
+    </div>
+    <table class="table">
+      <thead><tr>
+        <th></th>
+        <th>Started</th>
+        <th>Last Move</th>
+        <th># Rounds</th>
+        <th>Direction</th>
+        <th>Start</th>
+        <th>Players</th>
+      </tr></thead>
+      {% for game in active_games -%}
+      {% set game_state = game_states[game.id_] -%}
+      <tr class="{% if game_state == 'done_own' %}table-success{% elif game_state == 'wait' %}table-default{% else %}table-warning{% endif %}">
+        <td><a href="{{ url_for('game.view_game', game_id=game.id_) }}" class="btn {% if game_state == 'done_own' %}btn-success{% elif game_state == 'wait' %}btn-secondary{% else %}btn-warning{% endif %}">{% if game_state == 'done_own' %}View Own{% elif game_state == 'wait' %}Waiting{% else %}Continue{% endif %}</a></td>
+        <td>{{ game.started.strftime(config.TS_FORMAT) }}</td>
+        <td>{% if game.last_move is not none %}{{ game.last_move.strftime(config.TS_FORMAT) }}{% endif %}</td>
+        <td>{{ game.num_rounds }}</td>
+        <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
+        <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
+        <td>{% for player in game.players -%}
+          {{ player.display_name }} ({{ player.name }}){% if not loop.last %}, {% endif %}
+        {%- endfor %}</td>
+      </tr>
+      {%- endfor %}
+    </table>
+
+    <div class="row">
+      <div class="col-md-4">
+        <h1>Finished Games</h1>
+      </div>
+    </div>
+    <table class="table">
+      <thead><tr>
+        <th></th>
+        <th>Started</th>
+        <th>Last Move</th>
+        <th># Rounds</th>
+        <th>Direction</th>
+        <th>Start</th>
+        <th>Players</th>
+      </tr></thead>
+      {% for game in done_games -%}
+      <tr class="table-success">
+        <td><a href="{{ url_for('game.view_game', game_id=game.id_) }}" class="btn btn-success">View All</a></td>
+        <td>{{ game.started.strftime(config.TS_FORMAT) }}</td>
+        <td>{% if game.last_move is not none %}{{ game.last_move.strftime(config.TS_FORMAT) }}{% endif %}</td>
         <td>{{ game.num_rounds }}</td>
         <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
         <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
