--- a/telepict/templates/create_account.html
+++ b/telepict/templates/create_account.html
@@ -3,24 +3,47 @@
 
 {% block content %}
   <form action="{{ url_for('auth.create_account') }}" method='post'>
-    <div class="form-group">
-      <label for="input-name">Name </label>
-      <input id="input-name" type="text" name="name" autocomplete="username" class="form-control" required />
+    <div class="row">
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="input-name">Name </label>
+          <input id="input-name" type="text" name="name" autocomplete="username" class="form-control" required />
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="input-dispname">Display Name</label>
+          <input id="input-dispname" type="text" name="dispname" class="form-control" required />
+          <small class="form-text text-muted">You can change this later</small>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="form-group">
+          <label for="input-tz">Change Time Zone</label>
+          <select id="input-tz" name="timezone" class="form-select" />
+            {% for timezone in timezones -%}
+            <option {% if loop.first %}selected{% endif %}>{{ timezone }}</option>
+            {%- endfor %}
+          </select>
+        </div>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="input-dispname">Display Name</label>
-      <input id="input-dispname" type="text" name="dispname" class="form-control" required />
-      <small class="form-text text-muted">You can change this later</small>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="form-group">
+        <label for="input-pwd">Password</label>
+        <input id="input-pwd" type="password" name="password" autocomplete="new-password" class="form-control" pattern=".{8,}" required />
+          <small class="form-text text-muted">At least 8 characters</small>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="input-pwd">Confirm Password</label>
+          <input id="input-pwd-confirm" type="password" class="form-control" pattern=".{8,}" required />
+        </div>
+      </div>
     </div>
-    <div class="form-group">
-    <label for="input-pwd">Password</label>
-    <input id="input-pwd" type="password" name="password" autocomplete="new-password" class="form-control" pattern=".{8,}" required />
-      <small class="form-text text-muted">At least 8 characters</small>
-    </div>
-    <div class="form-group">
-    <label for="input-pwd">Confirm Password</label>
-    <input id="input-pwd-confirm" type="password" class="form-control" pattern=".{8,}" required />
-    </div>
+
     <button type="submit" class="btn btn-primary">Create Account</button>
   </form>
   <script>
