--- a/telepict/templates/edit_account.html
+++ b/telepict/templates/edit_account.html
@@ -3,14 +3,30 @@
 
 {% block content %}
   <form action="{{ url_for('auth.edit_account') }}" method='post'>
-    <div class="form-group">
-      <label for="input-dispname">Change Display Name</label>
-      <input id="input-dispname" type="text" name="dispname" class="form-control" required />
-    </div>
-    <div class="form-group">
-    <label for="input-pwd">Change Password</label>
-    <input id="input-pwd" type="password" name="password" class="form-control" pattern=".{8,}" />
-      <small class="form-text text-muted">At least 8 characters</small>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="input-dispname">Change Display Name</label>
+          <input id="input-dispname" type="text" name="dispname" class="form-control" value="{{ player.display_name }}" autocomplete="off" />
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="form-group">
+        <label for="input-pwd">Change Password</label>
+        <input id="input-pwd" type="password" name="password" class="form-control" pattern=".{8,}" autocomplete="new-password" />
+          <small class="form-text text-muted">At least 8 characters</small>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="form-group">
+          <label for="input-tz">Change Time Zone</label>
+          <select id="input-tz" name="timezone" class="form-select" />
+            {% for timezone in timezones -%}
+            <option {% if timezone == player.timezone %}selected{% endif %}>{{ timezone }}</option>
+            {%- endfor %}
+          </select>
+        </div>
+      </div>
     </div>
     <button type="submit" class="btn btn-primary">Update Account</button>
   </form>
