--- a/telepict/templates/base.html
+++ b/telepict/templates/base.html
@@ -7,7 +7,7 @@
 
     <title>Telepict - {% block title %}{% endblock %}</title>
 
-    <nav class="navbar navbar-light bg-light navbar-expand-lg">
+    <nav class="navbar navbar-light bg-light navbar-expand-lg ms-3">
       <div class="navbar-brand">Telephone Pictionary</div>
       <ul class="navbar-nav">
         <li class="nav-item active">
