--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -68,14 +68,18 @@
     <input id="text-input" size="100" />
     <button type="button" onclick="passWriting()">Submit</button>
   </div>
-  <div id="image-input-div" style="display: none">
-    <input id="color-picker" data-jscolor="" onChange="" value="#000000" />
-    <div id="image-canvas" data-dimensions="{{ config['CANVAS_WIDTH'] }}x{{ config['CANVAS_HEIGHT'] }}"></div>
-    <button class="btn btn-primary" type="button" onclick="passDrawing()">Submit</button>
-    <br/>
-    <p>Or upload a file:</p>
-    <input class="form-control" type="file" id="img-upload">
-    <button class="btn btn-primary" type="button" onclick="sendImage()">Upload</button>
+  <div class="row">
+    <div class="col-md-8">
+      <div id="image-input-div" style="display: none">
+        <input id="color-picker" data-jscolor="" onChange="" value="#000000" />
+        <div id="image-canvas" data-dimensions="{{ config['CANVAS_WIDTH'] }}x{{ config['CANVAS_HEIGHT'] }}"></div>
+        <button class="btn btn-primary" type="button" onclick="passDrawing()">Submit</button>
+        <br/>
+        <label for="img-upload" class="form-label">Or upload a file:</label>
+        <input class="form-control w-50" type="file" id="img-upload">
+        <button class="btn btn-primary" type="button" onclick="sendImage()">Upload</button>
+      </div>
+    </div>
   </div>
 {% endblock %}
 
