--- a/telepict/templates/base.html
+++ b/telepict/templates/base.html
@@ -7,14 +7,18 @@
 
     <title>Telepict - {% block title %}{% endblock %}</title>
 
-    <nav class="navbar navbar-light bg-light navbar-expand-lg ms-3">
-      <div class="navbar-brand">Telephone Pictionary</div>
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('game.index') }}">Home</a>
-        </li>
-        {%- include 'partials/user.html' %}
-      </ul>
+    <nav class="navbar navbar-light bg-light navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{{ url_for('game.index') }}">Telephone Pictionary</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            {%- include 'partials/user.html' %}
+          </ul>
+        </div>
+      </div>
     </nav>
     {%- endblock %}
   </head>
