Added preset palette colors to the color selector widget; made it bigger.

--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -87,6 +87,15 @@
     var imageInputDiv = document.querySelector('#image-input-div');
     var imgUpload = document.querySelector('#img-upload');
 
+    jscolor.presets.default = {
+        position: 'right',
+        palette: ['#FFFFFF', '#FF0000', '#FF8000', '#FFFF00', '#80FF00', '#00FF00', '#00FF80', '#00FFFF', '#0080FF', '#0000FF', '#8000FF', '#FF00FF', '#FF0080', '#BFBFBF', '#FF8080', '#FFBF80', '#FFFF80', '#BFFF80', '#80FF80', '#80FFBF', '#80FFFF', '#80BFFF', '#8080FF', '#BF80FF', '#FF80FF', '#FF80BF', '#808080', '#BF0000', '#BF6000', '#BFBF00', '#60BF00', '#00BF00', '#00BF60', '#00BFBF', '#0060BF', '#0000BF', '#6000BF', '#BF00BF', '#BF0060', '#000000', '#800000', '#804000', '#808000', '#408000', '#008000', '#008040', '#008080', '#004080', '#000080', '#400080', '#800080', '#800040'],
+        paletteCols: 13,
+        paletteHeight: 25,
+        width: 300,
+        hideOnPaletteClick: true,
+    };
+
     var ws = new WebSocket("ws://{{ server }}:{{ config['WS_PORT'] }}/game/" + game_id + "/" + player_id);
 
     ws.onmessage = function (event) {
