Mostly implemented ability to leave/rejoin game, proper handling of stacks for players that have left

--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -45,11 +45,29 @@
   </script>
 {% endblock %}
 {% block content %}
+  <div class="modal fade" id="leaveGameModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Leave Game</h5>
+        </div>
+        <div class="modal-body">
+          Are you sure?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <form action="{{ url_for('game.leave_game', game_id=game_id) }}", method="post">
+            <button type="submit" class="btn btn-danger">Leave Game</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="row flex-row-reverse">
     <div class="col-lg">
-      <div class="text-center">
-        <canvas id="overview-canvas" width="1px" height="1px"></canvas>
-      </div>
+      <canvas id="overview-canvas" width="1px" height="1px"></canvas>
+      <br/>
+      <button class="btn btn-secondary" type="button" data-bs-toggle="modal" data-bs-target="#leaveGameModal">Leave Game</button>
     </div>
     <div class="col-lg">
       <div id="game-display"></div>
@@ -57,7 +75,7 @@
   </div>
   <div id="text-input-div" style="display: none">
     <input id="text-input" size="100" />
-    <button type="button" onclick="passWriting()">Submit</button>
+    <button class="btn btn-primary" type="button" onclick="passWriting()">Submit</button>
   </div>
   <div class="row">
     <div class="col-md-8">
@@ -120,10 +138,13 @@
           pageData = page.content;
           if (page.type == 'Drawing') {
             disp.appendChild(h('p', {}, page.author + ' drew:'));
-            disp.appendChild(h('img', {class: 'img-fluid img-thumbnail', src: pageData}));
-          } else {
+            disp.appendChild(h('img', {class: 'img-fluid img-thumbnail mb-3', src: pageData}));
+          } else if (page.type == 'Writing') {
             disp.appendChild(h('p', {}, page.author + ' wrote:'));
             disp.appendChild(h('p', {class: 'card card-body'}, pageData));
+          } else {
+            // Player passed due to leaving
+            disp.appendChild(h('p', {}, page.author + ' was not in the game'));
           }
         }
       }
@@ -135,10 +156,12 @@
         pageData = page.content;
         if (page.type == 'Drawing') {
           disp.appendChild(h('p', {}, page.author + ' drew:'));
-          disp.appendChild(h('img', {class: 'img-fluid img-thumbnail', src: pageData}));
-        } else {
+          disp.appendChild(h('img', {class: 'img-fluid img-thumbnail mb-3', src: pageData}));
+        } else if (page.type == 'Writing') {
           disp.appendChild(h('p', {}, page.author + ' wrote:'));
           disp.appendChild(h('p', {class: 'card card-body'}, pageData));
+        } else {
+          // Player passed due to leaving
         }
       }
     };
