--- a/telepict/templates/index.html
+++ b/telepict/templates/index.html
@@ -3,6 +3,24 @@
 
 {% block content -%}
   {% if 'username' in session -%}
+    <div class="modal fade" id="rejoinGameModal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Rejoin Game</h5>
+          </div>
+          <div class="modal-body">
+            Are you sure?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <form action="{{ url_for('game.rejoin_game', game_id=0) }}", method="post">
+              <button type="submit" class="btn btn-primary">Rejoin Game</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-4">
         <h1>Pending Games</h1>
@@ -58,7 +76,8 @@
         <th>Start</th>
         <th>Players</th>
       </tr></thead>
-      {% for game in active_games -%}
+      {% for game_assn in active_games -%}
+      {%- set game = game_assn.game -%}
       {% set game_state = game_states[game.id_] -%}
       <tr class="{% if game_state == 'done_own' %}table-success{% elif game_state == 'wait' %}table-default{% else %}table-warning{% endif %}">
         <td><a href="{{ url_for('game.view_game', game_id=game.id_) }}" class="btn {% if game_state == 'done_own' %}btn-success{% elif game_state == 'wait' %}btn-secondary{% else %}btn-warning{% endif %}">{% if game_state == 'done_own' %}View Own{% elif game_state == 'wait' %}Waiting{% else %}Continue{% endif %}</a></td>
@@ -76,7 +95,7 @@
 
     <div class="row">
       <div class="col-md-4">
-        <h1>Finished Games</h1>
+        <h1>Past Games</h1>
       </div>
     </div>
     <table class="table">
@@ -89,9 +108,16 @@
         <th>Start</th>
         <th>Players</th>
       </tr></thead>
-      {% for game in done_games -%}
-      <tr class="table-success">
-        <td><a href="{{ url_for('game.view_game', game_id=game.id_) }}" class="btn btn-success">View All</a></td>
+      {% for game_assn in past_games -%}
+      {%- set game = game_assn.game -%}
+      {% set game_state = game_states[game.id_] -%}
+      <tr class="table-{% if game_state == 'done' %}success{% else %}secondary{% endif %}">
+        <td>
+          {%- if game_state == 'done' -%}
+            <a href="{{ url_for('game.view_game', game_id=game.id_) }}" class="btn btn-success">View All</a></td>
+          {%- else -%}
+            <button class="btn btn-secondary" type="button" data-bs-toggle="modal" data-bs-target="#rejoinGameModal" data-bs-game-id="{{ game.id_ }}">Rejoin</button>
+          {%- endif -%}
         <td>{{ game.started | render_timestamp }}</td>
         <td>{% if game.last_move is not none %}{{ game.last_move | render_timestamp }}{% endif %}</td>
         <td>{{ game.num_rounds }}</td>
@@ -104,4 +130,23 @@
       {%- endfor %}
     </table>
   {%- endif %}
+{%- endblock %}
+
+{% block footer -%}
+  <script>
+    var rejoinModal = document.getElementById('rejoinGameModal');
+    rejoinModal.addEventListener('show.bs.modal', function (event) {
+      // Button that triggered the modal
+      var button = event.relatedTarget
+      // Extract info from data-bs-* attributes
+      var game_id = button.getAttribute('data-bs-game-id')
+      // If necessary, you could initiate an AJAX request here
+      // and then do the updating in a callback.
+      //
+      // Update the modal's content.
+      var rejoinForm = rejoinModal.querySelector('.modal-footer form')
+
+      rejoinForm.action = rejoinForm.action.replace('game/0', 'game/' + game_id);
+    });
+  </script>
 {%- endblock %}
