--- a/telepict/templates/index.html
+++ b/telepict/templates/index.html
@@ -49,13 +49,13 @@
           {%- else -%}
             <a href="{{ url_for('game.pending_game', game_id=game.id_) }}" class="btn {% if owner %}btn-primary{% else %}btn-secondary{% endif %}">{% if owner %}Edit{% else %}View{% endif %}</a>
           {%- endif %}</td>
-        <td>{{ game.creator.display_name }} ({{ game.creator.name }})</td>
+        <td>{{ game.creator.display_name }}</td>
         <td>{{ game.created | render_timestamp }}</td>
         <td>{{ game.num_rounds }}</td>
         <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
         <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
         <td>{% for player in game.players -%}
-          {{ player.display_name }} ({{ player.name }}){% if not loop.last %}, {% endif %}
+          {{ player.display_name }}{% if not loop.last %}, {% endif %}
         {%- endfor %}</td>
       </tr>
       {%- endfor %}
@@ -87,7 +87,7 @@
         <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
         <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
         <td>{% for player in game.players -%}
-          {{ player.display_name }} ({{ player.name }}){% if not loop.last %}, {% endif %}
+          {{ player.display_name }}{% if not loop.last %}, {% endif %}
         {%- endfor %}</td>
       </tr>
       {%- endfor %}
@@ -124,7 +124,7 @@
         <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
         <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
         <td>{% for player in game.players -%}
-          {{ player.display_name }} ({{ player.name }}){% if not loop.last %}, {% endif %}
+          {{ player.display_name }}{% if not loop.last %}, {% endif %}
         {%- endfor %}</td>
       </tr>
       {%- endfor %}
